WordFeatureTreatment/testLog/SyntaxError_1.txt
  File "a.py", line 5
    from sklearn.feature_extraction.text import TfidfVectorizer
       ^
SyntaxError: invalid syntax
